--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -35,4 +35,5 @@ jobs:
       - name: run-app
         env:
           TZ: 'Asia/Tokyo'
+          SLACK_HOOK: ${{secrets.SLACK_HOOK}}
         run: npm start
